more style change

--- a/flowershop.html
+++ b/flowershop.html
@@ -13,36 +13,29 @@
 </head>
 <body>
 
-
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span3">
           <div class="sidebar-nav">
             <ul class="nav nav-list">
-
-              <li class="nav-header">Select the dates</li>
+                <li class="nav-header">Select the dates</li>
               	<div id="dates">
-              	
-          		</div>
+                </div>
 
-              <li class="nav-header">Select the flower types</li>
+                <li class="nav-header">Select the flower types</li>
               	<div id="flowers">
-          		</div>
+          		  </div>
 
-              <li class="nav-header">Select sold or unsold</li>
+                <li class="nav-header">Select sold or unsold</li>
               	<div id="soldOrUnsold">
-          		</div>
-
+          		  </div>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
-        <div class="span9">
-          <div class="hero-unit">
-            
-                <div class="row">
- 				<h1>Emily's Flower Shop</h1>
-				<svg class="chart"></svg>                   
-                </div>
+        <div class="span9" id="main">          
+          <div class="row">
+            <h1>Emily's Flower Shop</h1>
+            <svg class="chart"></svg>                   
           </div>
        	</div>
       </div>
