--- a/flowershop.html
+++ b/flowershop.html
@@ -29,6 +29,13 @@
                 <li class="nav-header">Select sold or unsold</li>
               	<div id="soldOrUnsold">
           		  </div>
+
+                <li>
+                  <!-- Button trigger modal -->
+                  <button class="btn btn-primary " data-toggle="modal" data-target="#myModal">
+                    Edit Data
+                  </button>
+                </li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
@@ -38,11 +45,33 @@
             <svg class="chart"></svg>                   
           </div>
        	</div>
-      </div>
+
+
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Edit the data for the graph</h4>
+              </div>
+              <div class="modal-body">
+                <textarea id="data"> </textarea>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" id="saveDataChange">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
 
 <body>
 
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="d3.v3.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="initialData.js"></script>
 <script src="script.js"></script>
