--- a/flowershop.html
+++ b/flowershop.html
@@ -39,6 +39,7 @@
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
+
         <div class="span9" id="main">          
           <div class="row">
             <h1>Emily's Flower Shop</h1>
@@ -50,11 +51,12 @@
 
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myModalLabel">Edit the data for the graph</h4>
+                <h4 class="modal-title" id="myModalLabel">Edit data for Emily's Flower Shop</h4>
               </div>
               <div class="modal-body">
                 <textarea id="data"> </textarea>
@@ -63,9 +65,12 @@
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-primary" id="saveDataChange">Save changes</button>
               </div>
+
             </div>
           </div>
         </div>
+
+
     </div>
 
 <body>
