--- a/Flowershop/flowershop.html
+++ b/Flowershop/flowershop.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="utf-8">
 
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.css">
+  <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap-responsive.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="chart.css">
 	
@@ -43,6 +43,7 @@
         <div class="span9" id="main">          
           <div class="row">
             <h1>Emily's Flower Shop</h1>
+            <h4>This page does not work on Linux. Please use a Mac or Windows!</h4>
             <svg class="chart"></svg>                   
           </div>
        	</div>
@@ -76,7 +77,7 @@
 <body>
 
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="d3.v3.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="../d3.v3.min.js"></script>
+<script src="../bootstrap/js/bootstrap.min.js"></script>
 <script src="initialData.js"></script>
 <script src="script.js"></script>
