more structural change

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 
-    <h1><a href="Flowershop/flowershop.html">Emily's Flower Shop</a></h1>
-    <h1><a href="Bezier/Bezier.html">Bezier</a></h1>
+    <h1><a href="flowershop.html">Emily's Flower Shop</a></h1>
+    <h1><a href="bezier.html">Bezier</a></h1>
 
 
 <body>
