--- a/index.html
+++ b/index.html
@@ -5,23 +5,16 @@
 <title>Emily's Flower Shop</title>
 <head>
   <meta charset="utf-8">
-
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.css">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="chart.css">
 	
 </head>
 <body>
 
-    <h1><a href="flowershop.html">Emily's Flower Shop</a></h1>
-    <h1><a href="bezier.html">Bezier</a></h1>
-
+    <a href="flowershop.html"><h1>Emily's Flower Shop</h1></a>
+    <a href="bezier.html"><h1>Bezier</h1></a>
+    <a href="http://cs.brown.edu/courses/cs129/results/final/yunmiao/"><h1>360Panorama</h1></a>
+    <a href="img2svg.html"><h1>IMG2SVG</h1></a>
 
 <body>
 
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="d3.v3.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="initialData.js"></script>
-<script src="script.js"></script>
+
