reorganized, added bspline

--- a/bezier.html
+++ b/bezier.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
   <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.css">
-  <link rel="stylesheet" type="text/css" href="Bezier/style.css">
+  <link rel="stylesheet" type="text/css" href="Bezier/bezier.css">
 	
 </head>
 <body>
@@ -40,7 +40,7 @@
                   </div>
                 </div>
                 <li class="nav-header">Select level of detail</li>
-                <div>
+                <div id="sliderWrapper">
                   <span id="levelOfDetail"></span>
                   <div id="slider">
                   </div>
