--- a/index.html
+++ b/index.html
@@ -2,18 +2,44 @@
 <!DOCTYPE html>
 
 
-<title>Emily's Flower Shop</title>
+<title>Yun Miao</title>
 <head>
   <meta charset="utf-8">
+
+  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 	
 </head>
 <body>
 
-    <a href="flowershop.html"><h1>Emily's Flower Shop</h1></a>
-    <a href="bezier.html"><h1>Bezier</h1></a>
-    <a href="http://cs.brown.edu/courses/cs129/results/final/yunmiao/"><h1>360Panorama</h1></a>
-    <a href="img2svg.html"><h1>IMG2SVG</h1></a>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3 offset2">
+          <div class="sidebar-nav">
+			<img src="images/Yuni.JPG" id="yuni"/>
+          </div><!--/.well -->
+        </div><!--/span-->
+
+        <div class="span6 offset1">   
+          	<div class="row main" id="menu">
+          		<ul class="nav-list">
+		    		<li><a href="#projects">Projects</a></li>
+		    		<li><a href="#drawings">Drawings</a></li>
+		    		<li><a href="#resume">Resume</a></li>
+		    		<li><a href="#resume">Other</a></li>
+		    	</ul>           
+          	</div>       
+          	<div class="row main" id="projects">
+          		<ul class="nav-list">
+		    		<li><a href="flowershop.html">FlowerShop</a></li>
+		    		<li><a href="bezier.html">Bezier</a></li>
+		    		<li><a href="http://cs.brown.edu/courses/cs129/results/final/yunmiao/">360&deg;Panorama</a></li>
+		    		<li><a href="img2svg.html">Img2svg</a></li>
+		    	</ul>          
+          	</div>
+       	</div>
+
 
 <body>
 
