--- a/flowershop.html
+++ b/flowershop.html
@@ -7,8 +7,7 @@
 
   <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-responsive.css">
-  <link rel="stylesheet" type="text/css" href="Flowershop/style.css">
-  <link rel="stylesheet" type="text/css" href="Flowershop/chart.css">
+  <link rel="stylesheet" type="text/css" href="Flowershop/flowershop.css">
 	
 </head>
 <body>
