--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		    		<li><a href="flowershop.html">FlowerShop</a></li>
 		    		<li><a href="bezier.html">Bezier</a></li>
 		    		<li><a href="http://cs.brown.edu/courses/cs129/results/final/yunmiao/">360&deg;Panorama</a></li>
-		    		<li><a href="img2svg.html">Img2svg</a></li>
-		    	</ul>          
+<!-- 		    		<li><a href="img2svg.html">Img2svg</a></li>
+ -->		    	</ul>          
           	</div>
        	</div>
 
